--- a/Qwizzi-front-end/index.html
+++ b/Qwizzi-front-end/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" href="/favicon.ico">
+  <link rel="icon" href="/images/logo.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vite App</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
